<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="35dp"
    tools:context=".subtitle.AnalysisSubTitleFragment">
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/subTitleStitchingBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">
            <TextView
                android:id="@+id/subTitleStitchingTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Stitching_Analysis"
                android:textColor="@color/disabled_text_color" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/subTitleStitchingInspectionBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">
            <TextView
                android:id="@+id/subTitleStitchingInspectionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Stitching_Inspection_Analysis"
                android:textColor="@color/secondary_text_color" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/subTitleDetectionBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">
            <TextView
                android:id="@+id/subTitleDetectionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/AI_Analysis"
                android:textColor="@color/disabled_text_color" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/subTitleDetectionInspectionBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">
            <TextView
                android:id="@+id/subTitleDetectionInspectionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/AI_Inspection_Analysis"
                android:textColor="@color/secondary_text_color" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/subTitleRemunerationBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">
            <TextView
                android:id="@+id/subTitleRemunerationTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Remuneration_Investigation_Analysis"
                android:textColor="@color/secondary_text_color"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/subTitleCadBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">
            <TextView
                android:id="@+id/subTitleCadTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/cad_Analysis"
                android:textColor="@color/secondary_text_color"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>