<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        tools:ignore="RtlSymmetry">
        <TextView
            android:id="@+id/progressPlaneNameTv"
            android:text="F"
             android:textSize="16sp"
            android:textColor="@color/title_text_color"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        </TextView>
        <TextView
            android:id="@+id/progressExpandUploadTv"
            android:background="@drawable/progress_rcv_background_left_off"
            android:layout_weight="2.5"
            android:text="@string/Upload"
            android:textSize="16sp"

            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        </TextView>
        <TextView
            android:id="@+id/progressExpandUploadInspectionTv"
            android:background="@drawable/progress_rcv_background_middle_off"
            android:layout_weight="2.5"
            android:text="@string/inspection"
            android:textSize="16sp"

            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        </TextView>
        <TextView
            android:id="@+id/progressExpandStitchingTv"
            android:background="@drawable/progress_rcv_background_middle_off"
            android:layout_weight="2.5"
            android:text="@string/stitching"
            android:textSize="16sp"

            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        </TextView>
        <TextView
            android:id="@+id/progressExpandStitchingInspectionTv"
            android:background="@drawable/progress_rcv_background_middle_off"
            android:layout_weight="2.5"
            android:text="@string/inspection"
            android:textSize="16sp"

            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        </TextView>
        <TextView
            android:id="@+id/progressExpandAnalysisTv"
            android:background="@drawable/progress_rcv_background_middle_off"
            android:layout_weight="2.5"
            android:text="@string/Analysis"
            android:textSize="16sp"

            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        </TextView>
        <TextView
            android:id="@+id/progressExpandAnalysisInspectionTv"
            android:background="@drawable/progress_rcv_background_right_off"
            android:layout_weight="2.5"
            android:text="@string/inspection"
            android:textSize="16sp"

            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent">
        </TextView>
        <LinearLayout
            android:layout_weight="1"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/disableReasonBtn"
                android:visibility="gone"
                android:text="@string/disable"
                android:background="@drawable/default_disable_btn_background"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        </LinearLayout>
</layout>