<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="35dp"
    tools:context=".subtitle.UploadSubTitleFragment">
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/subTitleGuideBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">
            <TextView
                android:id="@+id/subTitleGuideTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Guide_Upload"
                android:textColor="@color/disabled_text_color"
                 />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/subTitleUploadBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">

            <TextView
                android:id="@+id/subTitleUploadTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Upload_Upload"
                android:textColor="@color/disabled_text_color"
                 />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/subTitleScaleBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">

            <TextView
                android:id="@+id/subTitleScaleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Scale_Upload"
                android:textColor="@color/disabled_text_color"
                 />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/subTitleInspectionBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">
            <TextView
                android:id="@+id/subTitleInspectionTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Inspection_Upload"
                android:textColor="@color/secondary_text_color"
                 />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>