<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    tools:context=".subtitle.HomeSubTitleFragment">
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/subTitleFacilityBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">

            <TextView
                android:id="@+id/subTitleFacilityTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Facility_Home"
                android:textColor="@color/secondary_text_color"
                 />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/subTitleProgressBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">

            <TextView
                android:id="@+id/subTitleProgressTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Progress_Home"
                android:textColor="@color/disabled_text_color"
                 />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/subTitleInfoBtn"
            android:layout_width="wrap_content"
            android:layout_height="35dp">

            <TextView
                android:id="@+id/subTitleInfoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Info_Home"
                android:textColor="@color/disabled_text_color"
                 />
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>