<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relativeLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/default_color"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/crackIDTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:fontFamily="@font/pretendardbold"
            android:text="@string/tutorial"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@id/relativeLayout6"
        android:background="@drawable/default_background_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="6dp">
        <CheckBox
            android:id="@+id/noShowCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true" />
        <TextView
            android:text="@string/do_not_open_for_a_week"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/noShowCheckBox"



            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/closeBtn"
            android:layout_alignParentEnd="true"
            android:background="?attr/default_color"
            android:textColor="@color/white"


            android:text="@string/close"
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:background="@color/black"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/relativeLayout6"
        android:layout_below="@id/relativeLayout5">
        <VideoView
            android:id="@+id/videoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
</RelativeLayout>